fix: remove unescaped symbols

--- a/index.html
+++ b/index.html
@@ -353,13 +353,13 @@
                         <code>
                             const quarterOf = (month) => {
                                 switch (true) {
-                                    case month >= 1 && month <= 3:
+                                    case month >= 1 && month &lt;= 3:
                                         return 1;
-                                    case month >= 4 && month <= 6:
+                                    case month >= 4 && month &lt;= 6:
                                         return 2;
-                                    case month >= 7 && month <= 9:
+                                    case month >= 7 && month &lt;= 9:
                                         return 3;
-                                    case month >= 10 && month <= 12:
+                                    case month >= 10 && month &lt;= 12:
                                         return 4;
                                     default:
                                         return -1;
